plugins {
    id 'java'
    id 'war'
}

group 'ua.kpi.jakartaee'
version '1.0'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
    mockitoVersion = '5.15.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

war {
    archiveFileName.set('ROOT.war')
}

dependencies {
    compileOnly('jakarta.platform:jakarta.jakartaee-api:10.0.0')

    implementation 'jakarta.security.enterprise:jakarta.security.enterprise-api:3.0.0'
    implementation 'jakarta.authentication:jakarta.authentication-api:3.0.0'
    implementation 'jakarta.authorization:jakarta.authorization-api:3.0.0'

    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.0'

    implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa:4.0.5'
    implementation 'org.postgresql:postgresql:42.7.5'

    implementation 'org.flywaydb:flyway-core:11.7.0'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.7.0'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.3'

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    implementation 'org.apache.commons:commons-lang3:3.17.0'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    testImplementation 'org.assertj:assertj-core:3.27.3'

    testImplementation "org.mockito:mockito-core:$mockitoVersion"
    testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

}

test {
    useJUnitPlatform()
}